--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ authors = ["SEKINE, Hideki <sekineh@me.com>"]
 description = "Enhanced version of std::collections::BinaryHeap"
 license = "MIT"
 repository = "https://github.com/sekineh/binary-heap-plus-rs"
+readme = "README.md"
 
 [dependencies]
