--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,16 @@ language: rust
 services: docker
 sudo: required
 
-# TODO Rust builds on stable by default, this can be
+# DONE Rust builds on stable by default, this can be
 # overridden on a case by case basis down below.
 
 env:
   global:
-    # TODO Update this to match the name of your project.
-    - CRATE_NAME=trust
+    # DONE Update this to match the name of your project.
+    - CRATE_NAME=binary-heap-plus
 
 matrix:
-  # TODO These are all the build jobs. Adjust as necessary. Comment out what you
+  # DONE These are all the build jobs. Adjust as necessary. Comment out what you
   # don't need
   include:
     # Android
@@ -113,7 +113,7 @@ deploy:
     # In this example, there are some targets that are tested using the stable
     # and nightly channels. This condition makes sure there is only one release
     # for such targets and that's generated using the stable channel
-    condition: $TRAVIS_RUST_VERSION = stable
+    condition: $DEPLOY = never
     tags: true
   provider: releases
   skip_cleanup: true
