--- a/appveyor.yml
+++ b/appveyor.yml
@@ -66,13 +66,13 @@ deploy:
   auth_token:
     secure: t3puM/2hOig26EHhAodcZBc61NywF7/PFEpimR6SwGaCiqS07KR5i7iAhSABmBp7
   description: ''
-  on: false
-    # # TODO Here you can pick which targets will generate binary releases
-    # # In this example, there are some targets that are tested using the stable
-    # # and nightly channels. This condition makes sure there is only one release
-    # # for such targets and that's generated using the stable channel
-    # RUST_VERSION: stable
-    # appveyor_repo_tag: true
+  on:
+    # DONE Here you can pick which targets will generate binary releases
+    # In this example, there are some targets that are tested using the stable
+    # and nightly channels. This condition makes sure there is only one release
+    # for such targets and that's generated using the stable channel
+    RUST_VERSION: never
+    appveyor_repo_tag: true
   provider: GitHub
 
 cache:
