--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ serde1 = ["serde", "serde_derive"]
 [dependencies]
 serde = { version = "1", optional = true }
 serde_derive = { version = "^1.0.38", optional = true }
+
+[dev-dependencies]
+serde_json = "1.0.39"
