--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "binary-heap-plus"
-version = "0.1.4"
+version = "0.1.5"
 authors = ["SEKINE, Hideki <sekineh@me.com>"]
-description = "Enhanced version of std::collections::BinaryHeap that supports arbitrary order."
+description = "Enhanced version of std::collections::BinaryHeap that supports max, min, and custom-order heaps."
 license = "MIT"
 repository = "https://github.com/sekineh/binary-heap-plus-rs"
 readme = "README.md"
