--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,7 @@ serde_derive = { version = "^1.0.38", optional = true }
 
 [dev-dependencies]
 serde_json = "1.0.39"
+
+[badges]
+travis-ci = { repository = "sekineh/binary-heap-plus-rs" }
+appveyor = { repository = "sekineh/binary-heap-plus-rs" }
