--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,9 @@ readme = "README.md"
 keywords = ["binary", "heap", "priority", "queue"]
 category = ["data-structures", "algorithms", ]
 
-[features]
-serde1 = ["serde", "serde_derive"]
-
 [dependencies]
 compare = "0.1.0"
-serde = { version = "1", optional = true }
-serde_derive = { version = "^1.0.38", optional = true }
+serde = { version = "1.0", optional = true, features = ["derive"] }
 
 [dev-dependencies]
 serde_json = "1.0.39"
