--- a/appveyor.yml
+++ b/appveyor.yml
@@ -45,13 +45,13 @@ test_script:
   # we don't run the "test phase" when doing deploys
   - if [%APPVEYOR_REPO_TAG%]==[false] (
       cargo build --target %TARGET% &&
-      cargo build --target %TARGET% --features serde1 &&
+      cargo build --target %TARGET% --features serde &&
       cargo build --target %TARGET% --release &&
-      cargo build --target %TARGET% --release --features serde1 &&
+      cargo build --target %TARGET% --release --features serde &&
       cargo test --target %TARGET% &&
-      cargo test --target %TARGET% --features serde1 &&
+      cargo test --target %TARGET% --features serde &&
       cargo test --target %TARGET% --release &&
-      cargo test --target %TARGET% --release --features serde1
+      cargo test --target %TARGET% --release --features serde
     )
 
 before_deploy:
