--- a/appveyor.yml
+++ b/appveyor.yml
@@ -48,9 +48,13 @@ test_script:
       cargo build --target %TARGET% --features serde &&
       cargo build --target %TARGET% --release &&
       cargo build --target %TARGET% --release --features serde &&
+      cargo clean &&
       cargo test --target %TARGET% &&
+      cargo clean &&
       cargo test --target %TARGET% --features serde &&
+      cargo clean &&
       cargo test --target %TARGET% --release &&
+      cargo clean &&
       cargo test --target %TARGET% --release --features serde
     )
 
