--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,16 +44,16 @@ install:
 test_script:
   # we don't run the "test phase" when doing deploys
   - if [%APPVEYOR_REPO_TAG%]==[false] (
-      rm -f target/debug/deps/*binary_heap_plus*
+      rm -f target/debug/deps/*binary_heap_plus* &&
       cargo build --target %TARGET% &&
       cargo test  --target %TARGET% &&
-      rm -f target/debug/deps/*binary_heap_plus*
+      rm -f target/debug/deps/*binary_heap_plus* &&
       cargo build --target %TARGET% --features serde &&
       cargo test  --target %TARGET% --features serde &&
-      rm -f target/debug/deps/*binary_heap_plus*
+      rm -f target/debug/deps/*binary_heap_plus* &&
       cargo build --target %TARGET% --release &&
       cargo test  --target %TARGET% --release &&
-      rm -f target/debug/deps/*binary_heap_plus*
+      rm -f target/debug/deps/*binary_heap_plus* &&
       cargo build --target %TARGET% --release --features serde &&
       cargo test  --target %TARGET% --release --features serde
     )
