--- a/appveyor.yml
+++ b/appveyor.yml
@@ -50,10 +50,10 @@ test_script:
       rm -f target/debug/deps/*binary_heap_plus* &&
       cargo build --target %TARGET% --features serde &&
       cargo test  --target %TARGET% --features serde &&
-      rm -f target/debug/deps/*binary_heap_plus* &&
+      rm -f target/release/deps/*binary_heap_plus* &&
       cargo build --target %TARGET% --release &&
       cargo test  --target %TARGET% --release &&
-      rm -f target/debug/deps/*binary_heap_plus* &&
+      rm -f target/release/deps/*binary_heap_plus* &&
       cargo build --target %TARGET% --release --features serde &&
       cargo test  --target %TARGET% --release --features serde
     )
