try appveyor fix

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,16 +44,16 @@ install:
 test_script:
   # we don't run the "test phase" when doing deploys
   # - cargo build --target %TARGET%
-  - rm target/%TARGET%/debug/deps/*binary_heap_plus*
+  - cargo clean
   - cargo test  --target %TARGET%
   # - cargo build --target %TARGET% --features serde
-  - rm target/%TARGET%/debug/deps/*binary_heap_plus*
+  - cargo clean
   - cargo test  --target %TARGET% --features serde
   # - cargo build --target %TARGET% --release
-  - rm target/%TARGET%/release/deps/*binary_heap_plus*
+  - cargo clean
   - cargo test  --target %TARGET% --release
   # - cargo build --target %TARGET% --release --features serde
-  - rm target/%TARGET%/release/deps/*binary_heap_plus*
+  - cargo clean
   - cargo test  --target %TARGET% --release --features serde
 
 before_deploy:
