--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,16 +44,16 @@ install:
 test_script:
   # we don't run the "test phase" when doing deploys
   # - cargo build --target %TARGET%
-  - cargo clean
+  - cargo clean --target %TARGET% 
   - cargo test  --target %TARGET%
   # - cargo build --target %TARGET% --features serde
-  - cargo clean
+  - cargo clean --target %TARGET% 
   - cargo test  --target %TARGET% --features serde
   # - cargo build --target %TARGET% --release
-  - cargo clean
+  - cargo clean --target %TARGET% --release
   - cargo test  --target %TARGET% --release
   # - cargo build --target %TARGET% --release --features serde
-  - cargo clean
+  - cargo clean --target %TARGET% --release
   - cargo test  --target %TARGET% --release --features serde
 
 before_deploy:
