--- a/appveyor.yml
+++ b/appveyor.yml
@@ -42,18 +42,13 @@ install:
 
 # TODO This is the "test phase", tweak it as you see fit
 test_script:
-  # we don't run the "test phase" when doing deploys
-  # - cargo build --target %TARGET%
-  - cargo clean --target %TARGET% 
+  - cargo build --target %TARGET%
   - cargo test  --target %TARGET%
-  # - cargo build --target %TARGET% --features serde
-  - cargo clean --target %TARGET% 
+  - cargo build --target %TARGET% --features serde
   - cargo test  --target %TARGET% --features serde
-  # - cargo build --target %TARGET% --release
-  - cargo clean --target %TARGET% --release
+  - cargo build --target %TARGET% --release
   - cargo test  --target %TARGET% --release
-  # - cargo build --target %TARGET% --release --features serde
-  - cargo clean --target %TARGET% --release
+  - cargo build --target %TARGET% --release --features serde
   - cargo test  --target %TARGET% --release --features serde
 
 before_deploy:
