--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,14 +10,51 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        rust:
+        - stable
+        - 1.26.0 # MSRV
 
     steps:
     - uses: actions/checkout@v2
-    - name: Build
-      run: cargo build --verbose
-    - name: Build (serde)
-      run: cargo build --verbose --features serde
-    - name: Run tests
-      run: cargo test --verbose
-    - name: Run tests (serde)
-      run: cargo test --verbose --features serde
+
+    - name: Install toolchain
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: ${{ matrix.rust }}
+        override: true
+    
+    - name: Run cargo check
+      uses: actions-rs/cargo@v1
+      with:
+        command: check
+
+    - name: Run cargo build
+      uses: actions-rs/cargo@v1
+      with:
+        command: build
+
+    - name: Run cargo build w/ serde
+      uses: actions-rs/cargo@v1
+      with:
+        command: build --features serde
+
+    - name: Run cargo test
+      uses: actions-rs/cargo@v1
+      with:
+        command: test
+
+    - name: Run cargo test w/ serde
+      uses: actions-rs/cargo@v1
+      with:
+        command: test --features serde
+
+#     - name: Build
+#       run: cargo build --verbose
+#     - name: Build (serde)
+#       run: cargo build --verbose --features serde
+#     - name: Run tests
+#       run: cargo test --verbose
+#     - name: Run tests (serde)
+#       run: cargo test --verbose --features serde
