--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -32,6 +32,7 @@ jobs:
       uses: actions-rs/cargo@v1
       with:
         command: check
+        args: ${{ matrix.cargo_args }}
 
     - name: Run cargo build
       uses: actions-rs/cargo@v1
