--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,5 @@ serde = { version = "1.0", optional = true, features = ["derive"] }
 serde_json = "1.0.39"
 
 [badges]
-travis-ci = { repository = "sekineh/binary-heap-plus-rs" }
-appveyor = { repository = "sekineh/binary-heap-plus-rs" }
+# TODO: waiting for PR to land...: https://github.com/rust-lang/crates.io/pull/1838#
+# github-actions = { repository = "sekineh/binary-heap-plus-rs", workflow = "Rust" }
