--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -50,6 +50,12 @@ jobs:
         command: test
         args: ${{ matrix.cargo_args }}
 
+    - name: Run cargo test
+      uses: actions-rs/cargo@v1
+      with:
+        command: test
+        args: ${{ matrix.cargo_args }}
+
 #     - name: Build
 #       run: cargo build --verbose
 #     - name: Build (serde)
