Adjust lint levels for using unsafe blocks in unsafe fns
If the `unsafe_op_in_unsafe_fn` lint is available (since Rust 1.52.0),
set it to "deny", requiring `unsafe { }` blocks in order to perform
unsafe operations even in unsafe functions; this silences the otherwise
default warning of the `unused_unsafe` lint as well.

If the `unsafe_op_in_unsafe_fn` lint is not available, then just supress
warnings from the `unused_unsafe` lint.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ keywords = ["binary", "heap", "priority", "queue"]
 categories = ["data-structures", "algorithms", ]
 edition = "2018"
 
+[build-dependencies]
+autocfg = "1"
+
 [dependencies]
 compare = "0.1.0"
 serde = { version = "1.0.116", optional = true, features = ["derive"] }
