--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,7 @@ jobs:
         - macos-latest
         rust:
         - stable
-        - 1.36.0 # MSRV (Rust 2018 and dev-dependency `serde_json`)
+        - 1.52.0  # MSRV
         cargo_args:
         - ""
         - --features serde
@@ -25,12 +25,6 @@ jobs:
           # where there is conditional compilation
           - os: ubuntu-latest
             rust: nightly
-            cargo_args: ""
-          - os: ubuntu-latest
-            rust: 1.41.0
-            cargo_args: ""
-          - os: ubuntu-latest
-            rust: 1.52.0
             cargo_args: ""
           - os: ubuntu-latest
             rust: 1.56.0
