--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,8 @@ repository = "https://github.com/sekineh/binary-heap-plus-rs"
 readme = "README.md"
 keywords = ["binary", "heap", "priority", "queue"]
 categories = ["data-structures", "algorithms", ]
-edition = "2018"
-
-[build-dependencies]
-autocfg = "1"
+edition = "2021"
+rust-version = "1.56.0"
 
 [dependencies]
 compare = "0.1.0"
